# taskmates

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  conftest.py  docker-compose.yaml  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  docker-compose.yml  run
.github/workflows/: build.yml  publish-devcontainer-image.yml  publish-docker-image.yml
docs/usage/: front-matter-options.md
pocs/: pyparsing_cheat_sheet.py  pyparsing_simple.py
runner/: Dockerfile  entrypoint.sh  run
runner/event_handlers/: github-event-issue-comment  github-event-pr-comment
runner/functions/: should_handle_request.sh
runner/steps/: create-pr-if-necessary  summarize
runner/workflows/: issue-workflow  pr-workflow
taskmates/: __init__.py  config.py  contexts.py  env.py  function_registry.py  load_env_files.py  logging.py  model_config.yaml  patches.py  signal_config.py  signals.py  sinks.py  taskmates_runtime.py  types.py
taskmates/actions/: invoke_function.py  parse_markdown_chat.py
taskmates/assistances/: async_complete.py  complete.py  completion_assistance.py  completion_context.py  completion_opts.py
taskmates/assistances/chat_completion/: chat_completion_editor_completion.py  markdown_chat_completion_assistance.py
taskmates/assistances/markdown/: editor_appender.py  markdown_completion_assistance.py  tool_editor_completion.py
taskmates/bridges/: websocket_bridges.py
taskmates/cli/: complete.py  completion_context.py  completion_opts.py  direct_completion.py  main.py  taskmates_cli.py  taskmates_complete.py  websocket_completion.py
taskmates/config/: client_config.py  completion_context.py  completion_opts.py  context_fork.py  find_config_file.py  get_file_mtime.py  load_model_config.py  load_participant_config.py  load_yaml_config.py  server_config.py  step_context.py  test_model_config.py  updated_config.py
taskmates/context_builders/: __init__.py  api_context_builder.py  base.py  build_api_context.py  build_cli_context.py  build_default_context.py  build_sdk_context.py  build_test_context.py  cli_context_builder.py  context_builder.py  default_context_builder.py  sdk_context_builder.py  test_context_builder.py
taskmates/core/: chat_session.py  coalesce.py  completion_engine.py  completion_next_completion.py  completion_provider.py  compute_next_completion.py  compute_separator.py  daemon.py  execution_context.py  execution_environment.py  job.py  merge_jobs.py  processor.py  rules_engine.py  run.py  runner.py  signal_receiver.py  signals.py  states.py  taskmates_workflow.py  tools_registry.py  workflow_registry.py
taskmates/default_config/: model_config.yaml  models.yaml
taskmates/defaults/: ISSUE_COMMENT_TEMPLATE.jinja2  config.toml  context_defaults.py  models.yaml  settings.py
taskmates/docker/: dev_environment.py  test_dev_environment.py
taskmates/extensions/: dotenv_injector.py  github_app_token_env_injector.py  github_token_env_injector.py  taskmates_development.py  taskmates_dir_loader.py  taskmates_dirs_loader.py  taskmates_env_injector.py  taskmates_working_dir_env.py  taskmates_working_dir_env_reader.py
taskmates/instrumentation/: taskmates_instrumentor.py
taskmates/io/: file_system_artifacts_sink.py  formatting_processor.py  history_sink.py  output_signals_to_websocket_bridge.py  sig_int_and_sig_term_controller.py  sig_int_and_sig_term_controls.py  stdout_completion_streamer.py  stdout_sink.py  streaming_sink.py  web_socket_completion_streamer.py  web_socket_interrupt_and_kill_controller.py  web_socket_interrupt_and_kill_handler.py  websocket_completion_streamer.py  websocket_streaming_sink.py
taskmates/lib/: parse_output.py  restore_stdout.py  restore_stdout_and_stderr.py
taskmates/magics/: file_editing_magics.py
taskmates/model/: chat.py  chat_message.py  endpoint.py  last_message.py  tool_call.py
taskmates/runner/: github_workflow.py
taskmates/sdk/: __init__.py  async_complete.py  complete.py  extension_manager.py  plugin_manager.py  subclass_extension_points.py  taskmates_extension.py  taskmates_plugin.py  test_sdk_workflow.py
taskmates/server/: server.py  streamed_response.py
taskmates/signals/: base_signals.py  handler.py  signals.py
taskmates/sinks/: file_system_artifacts_sink.py  stdout_streaming_sink.py  websocket_signal_bridge.py  websocket_streaming_sink.py
taskmates/tools/: function_registry.py
taskmates/workflow_engine/: base_signals.py  create_sub_run.py  daemon.py  default_environment_signals.py  environment.py  environment_signals.py  fulfills.py  merge_jobs.py  objective.py  plan.py  run.py  signal_direction.py  workflow.py  workflow_registry.py
taskmates/workflows/: cli_complete.py  cli_inputs_complete.py  get_incoming_markdown.py  github_issue.py  markdown_complete.py
tests/actions/: test_parse_markdown_chat.py
tests/cli/: test_cli_completions.py
tests/core/: test_chat_session.py  test_completion_engine.py
tests/fixtures/: date_loop.sh  my_function.py
tests/integration/: test_github_issue_workflow.py
tests/scripts/: capture_anthropic_langchain_chunks.py  capture_anthropic_langchain_thinking_chunks.py  capture_anthropic_langchain_tool_chunks.py  capture_anthropic_tool_chunks.py  capture_gemini_langchain_chunks.py  capture_gemini_langchain_tool_chunks.py  capture_grok_langchain_chunks.py  capture_grok_live_search_langchain_chunks.py  capture_langchain_chunks.py  capture_langchain_tool_chunks.py  capture_langchain_web_search_tool_chunks.py  capture_ollama_gpt_oss_langchain_chunks.py  capture_ollama_gpt_oss_langchain_tool_chunks.py  capture_ollama_langchain_chunks.py  capture_ollama_langchain_tool_chunks.py  capture_ollama_llama_4_langchain_chunks.py  capture_ollama_llama_4_langchain_tool_chunks.py  capture_openai_langchain_chunks.py  capture_openai_langchain_tool_chunks.py
tests/server/: test_completions_v2.py  test_websocket_api_completions.py
tools/chroma_/: chromadb_search.py
tools/dalle_/: generate_images.py
tools/filesystem_/: read_file.py  write_file.py
tools/jira_/: get_jira_client.py  jira_.py
(+612 files in other folders)
