[tool.poetry]
name = "taskmates"
version = "0.1.0"
description = ""
authors = ["srizzo <rizzolabs@gmail.com>"]
readme = "README.md"
exclude = ["tests/", "examples/*", "data/", "pocs/", "notebooks/", "lib/lamma_/", "bin/", "lib/llama_/*"]
include = ["tools/"]


[tool.poetry.dependencies]
anthropic = "^0.34.2"
blinker = "^1.7.0"
decohints = "^1.0.9"
docstring-parser = "^0.16"
dpath = "^2.1.6"
funcy = "^2.0"
google-api-python-client = "^2.137.0"
hypercorn = "^0.16.0"
inflection = "^0.5.1"
ipython = "^8.26.0"
jinja2 = "^3.1.2"
jira = "^3.8.0"
jsonref = "^1.1.0"
jupytext = "^1.16.0"
loguru = "^0.7.2"
markdown = "^3.5.1"
markdown-tree-parser = "^0.1"
markupsafe = "^2.1.3"
nbclient = "^0.10.0"
nbconvert = "^7.16.4"
numpy = "^1.26.2"
openai = { extras = ["embeddings", "wandb"], version = "^1.45.0" }
pandas = "^2.1.4"
pillow = "^10.1.0"
pydantic = "^2.5.2"
pyparsing = "^3.1.2"
pypdf = "^4.3.1"
python = ">=3.11.1,<3.13"
pyyaml = "^6.0.1"
quart = "^0.19.6"
ruamel-yaml = "^0.18.5"
typeguard = "^4.1.5"
wrapt = "^1.16.0"

# experimental
opentelemetry-api = "^1.23.0"
opentelemetry-distro = "^0.44b0"
opentelemetry-exporter-otlp-proto-common = "^1.23.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.23.0"
opentelemetry-instrumentation = "^0.44b0"
opentelemetry-instrumentation-asgi = "^0.44b0"
opentelemetry-instrumentation-fastapi = "^0.44b0"
opentelemetry-instrumentation-flask = "^0.44b0"
opentelemetry-instrumentation-logging = "^0.44b0"
opentelemetry-instrumentation-requests = "^0.44b0"
opentelemetry-instrumentation-wsgi = "^0.44b0"
opentelemetry-proto = "^1.23.0"
opentelemetry-sdk = "^1.23.0"
opentelemetry-semantic-conventions = "^0.44b0"
opentelemetry-util-http = "^0.44b0"
tiktoken = "^0.7.0"

# fix 1.65.1
# https://github.com/grpc/grpc/issues/37178
grpcio = "1.66.1"


# extras
chromadb = "^0.5.4"
jupyter-client = "^8.6.2"
pyarrow = "^17.0.0"
httpx = "^0.27.0"
nbformat = "^5.10.4"
requests = "^2.32.2"
websockets = "^13.0"
ipykernel = "^6.29.4"

# used by code cells
matplotlib = "^3.9.0"
matplotlib-inline = "^0.1.7"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-mock = "^3.14.0"
pygithub = "^2.3.0"

typing-extensions = "^4.12.2"
ordered-set = "^4.1.0"
ipytest = "^0.14.2"
testcontainers = "^4.7.2"
commentjson = "^0.9.0"
python-dotenv = "^1.0.1"
toml = "^0.10.2"
[tool.poetry.group.dev.dependencies]
pytest-socket = "^0.7.0"
icecream = "^2.1.3"
jupyter = "^1.0.0"
neo4j = "^5.15.0"
patch = "^1.16"

coverage = "^7.6.0"
pytest-timeout = "^2.3.1"

pytest-xdist = "^3.6.1"
testcontainers = "^4.7.2"
[tool.poetry.extras]
chromadb = ["chromadb"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
taskmates-tools = "taskmates.tools.function_registry:main"
taskmates-count-tokens = "lib.openaei_.count_tokens:main"
taskmates-extract-section = "taskmates.cli.extract_section:main"
taskmates-jupyter-enterprise-gateway = "taskmates.clients.jupyter_.jupyter_enterprise_gateway_client:main"
taskmates-code-ls = "lib.cli_ide.code_ls:main"
taskmates-code-ast = "lib.cli_ide.code_ast:main"
taskmates-google-search = "tools.google_.google_search:main"
taskmates = "taskmates.cli.main:main"

[tool.setuptools_scm]
