[tool.poetry]
name = "taskmates"
version = "0.2.0"
description = ""
authors = ["srizzo <rizzolabs@gmail.com>"]
readme = "README.md"
exclude = ["tests/", "examples/*", "data/", "pocs/", "notebooks/", "lib/lamma_/", "bin/", "lib/llama_/*"]
include = ["tools/"]


[tool.poetry.dependencies]
blinker = "^1.7.0"
decohints = "^1.0.9"
docstring-parser = "^0.16"
dpath = "^2.1.6"
funcy = "^2.0"
google-api-python-client = "^2.137.0"
hypercorn = "^0.16.0"
inflection = "^0.5.1"
ipython = "^8.26.0"
jinja2 = "^3.1.2"
jira = "^3.8.0"
jsonref = "^1.1.0"
jupytext = "^1.16.0"
loguru = "^0.7.2"
markdown = "^3.5.1"
markdown-tree-parser = "^0.1"
markupsafe = "^2.1.3"
nbclient = "^0.10.0"
nbconvert = "^7.16.4"
numpy = "^1.26.2"
pandas = "^2.1.4"
pillow = "^10.1.0"
pydantic = "^2.11.5"
pyparsing = "^3.1.2"
pypdf = "^4.3.1"
python = ">=3.11.1,<3.13"
pyyaml = "^6.0.1"
quart = "^0.19.6"
ruamel-yaml = "^0.18.5"
typeguard = "^4.1.5"
wrapt = "^1.16.0"

# experimental
opentelemetry-api = "^1.31.1"
opentelemetry-distro = { version = "^0.52b1", extras = ["otlp"] }
opentelemetry-exporter-otlp-proto-common = "^1.31.1"
opentelemetry-exporter-otlp-proto-grpc = "^1.31.1"
opentelemetry-instrumentation = "^0.52b1"
opentelemetry-instrumentation-aiohttp-client = "^0.52b1"
opentelemetry-instrumentation-aiohttp-server = "^0.52b1"
opentelemetry-instrumentation-asgi = "^0.52b1"
opentelemetry-instrumentation-asyncio = "^0.52b1"
opentelemetry-instrumentation-asyncpg = "^0.52b1"
opentelemetry-instrumentation-aws-lambda = "^0.52b1"
opentelemetry-instrumentation-boto3sqs = "^0.52b1"
opentelemetry-instrumentation-botocore = "^0.52b1"
opentelemetry-instrumentation-dbapi = "^0.52b1"
opentelemetry-instrumentation-fastapi = "^0.52b1"
opentelemetry-instrumentation-flask = "^0.52b1"
opentelemetry-instrumentation-grpc = "^0.52b1"
opentelemetry-instrumentation-httpx = "^0.52b1"
opentelemetry-instrumentation-jinja2 = "^0.52b1"
opentelemetry-instrumentation-logging = "^0.52b1"
opentelemetry-instrumentation-pymysql = "^0.52b1"
opentelemetry-instrumentation-redis = "^0.52b1"
opentelemetry-instrumentation-requests = "^0.52b1"
opentelemetry-instrumentation-sqlalchemy = "^0.52b1"
opentelemetry-instrumentation-sqlite3 = "^0.52b1"
opentelemetry-instrumentation-system-metrics = "^0.52b1"
opentelemetry-instrumentation-tornado = "^0.52b1"
opentelemetry-instrumentation-tortoiseorm = "^0.52b1"
opentelemetry-instrumentation-urllib = "^0.52b1"
opentelemetry-instrumentation-urllib3 = "^0.52b1"
opentelemetry-instrumentation-wsgi = "^0.52b1"
opentelemetry-proto = "^1.31.1"
opentelemetry-sdk = "^1.31.1"
opentelemetry-semantic-conventions = "^0.52b1"
opentelemetry-test-utils = "^0.52b1"
opentelemetry-util-http = "^0.52b1"


tiktoken = "^0.7.0"

# fix 1.65.1
# https://github.com/grpc/grpc/issues/37178
#grpcio = "1.66.1"
grpcio = "1.68.1"


# extras
chromadb = ">=0.5.21"
jupyter-client = "^8.6.2"
pyarrow = "^17.0.0"
httpx = "^0.28.1"
nbformat = "^5.10.4"
requests = "^2.32.2"
websockets = "^13.0"
ipykernel = "^6.29.4"

# used by code cells
matplotlib = "^3.9.0"
matplotlib-inline = "^0.1.7"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-mock = "^3.14.0"
pygithub = "^2.3.0"

typing-extensions = "^4.12.2"
ordered-set = "^4.1.0"
ipytest = "^0.14.2"
testcontainers = "^4.7.2"
commentjson = "^0.9.0"
python-dotenv = "^1.0.1"
toml = "^0.10.2"
python-on-whales = "^0.73.0"

pytest-env = "^1.1.5"
langchain = "^0.3.21"
langchain-openai = "^0.3.11"
langchain-anthropic = "^0.3.10"
langchain-google-genai = "^2.1.2"
google-genai = "^1.8.0"
langchain-community = "^0.3.20"
langchain-xai = "^0.2.3"
ruff = "^0.11.13"
pylint = "^3.3.7"
openai = "^1.86.0"
langchain-ollama = "^0.3.3"
[tool.poetry.group.dev.dependencies]
pytest-socket = "^0.7.0"
icecream = "^2.1.3"
jupyter = "^1.0.0"
neo4j = "^5.15.0"
patch = "^1.16"

coverage = "^7.6.0"
pytest-timeout = "^2.3.1"

pytest-xdist = "^3.6.1"
testcontainers = "^4.7.2"
snoop = "^0.6.0"
[tool.poetry.extras]
chromadb = ["chromadb"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
google-search = "taskmates.defaults.tools.google_.google_search:main"
taskmates-tools = "taskmates.tools.function_registry:main"
taskmates-count-tokens = "lib.openaei_.count_tokens:main"
taskmates-extract-section = "taskmates.cli.extract_section:main"
taskmates-jupyter-enterprise-gateway = "taskmates.clients.jupyter_.jupyter_enterprise_gateway_client:main"
taskmates-code-ls = "lib.cli_ide.code_ls:main"
taskmates-code-ast = "lib.cli_ide.code_ast:main"
taskmates = "taskmates.cli.main:main"

[tool.pytest_env]
TASKMATES_ENV = "test"
TASKMATES_LOG_LEVEL = "WARNING"
TASKMATES_TELEMETRY_ENABLED = 0

[tool.setuptools_scm]

